--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ html{
     width: 70px;
 }
 .navbar a{
-    color: var(--main-color);
+    color: #003147;
     font-weight: bolder;
     font-size: 1.5rem;
     margin-left: 2rem;
@@ -209,4 +209,234 @@ html{
     background: transparent;
     border: 1px solid var(--secondary-color);
     color: black;
+}
+.our-services{
+    padding: 4rem 7%;
+    background-color: #d3d3d3;
+}
+.service-content{
+    text-align: center;
+}
+.service-content a{
+    font-size: 40px;
+    color: #003147;
+}
+.main-services{
+    padding: 6rem 0;
+    display: flex;
+    position: relative;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 15px;
+}
+
+
+
+.inner-services-content{
+    flex: 2 2 250px;
+    padding: 10rem 1rem;
+    text-align: center;
+    background-color:white
+
+}
+.inner-services-content1{
+    flex: 2 2 250px;
+
+    padding: 10rem 1rem;
+    text-align: center;
+    background-color: white
+
+}
+.inner-services-content2{
+    flex: 2 2 250px;
+    padding: 10rem 1rem;
+    text-align: center;
+    background-color: white
+
+
+}
+.inner-services-content:hover{
+    transform:scale(1.05);
+    background-image: url(./Images/walter-otto-PT70CT6mATQ-unsplash.jpg);
+    background-size: cover;
+    background-position: center;
+    transform:scale(1.05);
+
+
+}
+.inner-services-content:hover:before{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color:#ff5d22;
+    opacity: 0.8;
+
+}
+.inner-services-content1:hover{
+    transform:scale(1.05);
+    background-image: url(./Images/roberto-sorin-RS0-h_pyByk-unsplash.jpg);
+    background-size: cover;
+    background-position: center;
+    transform:scale(1.05);
+}
+.inner-services-content1:hover:before{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #003147;
+    opacity: 0.8;
+}
+.inner-services-content2:hover{
+    transform:scale(1.05);
+    background-image: url(./Images/national-cancer-institute-w7Pby5bDKW4-unsplash.jpg);
+    background-size: cover;
+    background-position: center;
+    transform:scale(1.05);
+}
+.inner-services-content2:hover:before{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color:#ff5d22;
+    opacity: 0.8;
+}
+
+
+.inner-services-content h2{
+    font-size: 25px;
+    margin-bottom: 10px;
+    margin-top: 25px;
+    color: #003147;
+    position: relative;
+}
+.inner-services-content1 h2{
+    font-size: 25px;
+    margin-bottom: 10px;
+    margin-top: 25px;
+    color: #003147;
+    position: relative;
+}
+.inner-services-content2 h2{
+    font-size: 25px;
+    margin-bottom: 10px;
+    margin-top: 25px;
+    color: #003147;
+    position: relative;
+}
+
+.inner-services-content .service-content p{
+    font-size: 1.5rem;
+    color: #003147;
+    position: relative;
+    text-align: center;
+}
+.inner-services-content1 p{
+    font-size: 1.5rem;
+    color: #003147;
+    position: relative;
+}
+.inner-services-content2 p{
+    font-size: 1.5rem;
+    color: #003147;
+    position: relative;
+}
+.services-icon i{
+    font-size: 5rem;
+    width: 9rem;
+    height: 9rem;
+    border-radius: 50%;
+    text-align: center;
+    line-height: 8rem;
+    color: white;
+    background: var(--main-color);
+    margin-bottom: 15px;
+    cursor: pointer;
+    transition: .3s;
+    position: absolute;
+    top: 0;
+    left:12%;
+    margin-top: 19px;
+}
+.services-icon1 i{
+    font-size: 5rem;
+    width: 9rem;
+    height: 9rem;
+    border-radius: 50%;
+    text-align: center;
+    line-height: 8rem;
+    color: white;
+    background: var(--main-color);
+    margin-bottom: 15px;
+    cursor: pointer;
+    transition: .3s;
+    position: absolute;
+    top: 0;
+    left:45%;
+    margin-top: 19px;
+}
+.services-icon2 i{
+    font-size: 5rem;
+    width: 9rem;
+    height: 9rem;
+    border-radius: 50%;
+    text-align: center;
+    line-height: 8rem;
+    color: white;
+    background: var(--main-color);
+    margin-bottom: 15px;
+    cursor: pointer;
+    transition: .3s;
+    position: absolute;
+    top: 0;
+    left:80%;
+    margin-top: 19px;
+}
+.services-icon i:hover{
+    color: white;
+    background: var(--main-color);
+    display: none;
+}
+.services-icon1 i:hover{
+    color: white;
+    background: var(--main-color);
+    display: none;
+}
+.services-icon2 i:hover{
+    color: white;
+    background: var(--main-color);
+    display: none;
+}
+.categories{
+    display: flex;
+    gap: 10px;
+    text-align: center;
+    position: relative;
+    color: #003147;
+}
+.categories1{
+    display: flex;
+    gap: 10px;
+    text-align: center;
+    position: relative;
+    color: #003147;
+}
+.categories2{
+    display: flex;
+    gap: 10px;
+    text-align: center;
+    position: relative;
+    color: #003147;
+}
+.white{
+    color: white;
 }
