--- a/style.css
+++ b/style.css
@@ -146,9 +146,11 @@ html{
 }
 .background-content h1{
     color: var(--main-color);
-    font-size: 50px;
+    font-size: 45px;
     font-weight: bold;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
+
+    margin-right: 20px;
 }
 .background-content p{
     font-size: 1.5rem;
@@ -206,14 +208,14 @@ html{
     color: white;
     transition: .2s;
 }
-.about-content a:hover{
+.about-content .buttons a:hover{
     background: transparent;
     border: 1px solid var(--secondary-color);
     color: black;
 }
 .our-services{
     padding: 4rem 7%;
-    background-color: #d3d3d3;
+    background: linear-gradient(to left, #ffffff, #f2f9fc);
 }
 .service-content{
     text-align: center;
@@ -238,7 +240,8 @@ html{
     flex: 2 2 250px;
     padding: 10rem 1rem;
     text-align: center;
-    background-color:white
+    background-color:white;
+    box-shadow: 2px 2px 5px #003147;
 
 }
 .inner-services-content1{
@@ -246,14 +249,16 @@ html{
 
     padding: 10rem 1rem;
     text-align: center;
-    background-color: white
+    background-color: white;
+    box-shadow: 2px 2px 5px #003147;
 
 }
 .inner-services-content2{
     flex: 2 2 250px;
     padding: 10rem 1rem;
     text-align: center;
-    background-color: white
+    background-color: white;
+    box-shadow: 2px 2px 5px #003147;
 
 
 }
@@ -274,7 +279,7 @@ html{
     right: 0;
     bottom: 0;
     background-color:#ff5d22;
-    opacity: 0.8;
+    opacity: 0.9;
 
 }
 .inner-services-content1:hover{
@@ -292,7 +297,7 @@ html{
     right: 0;
     bottom: 0;
     background-color: #003147;
-    opacity: 0.8;
+    opacity: 0.9;
 }
 .inner-services-content2:hover{
     transform:scale(1.05);
@@ -309,7 +314,7 @@ html{
     right: 0;
     bottom: 0;
     background-color:#ff5d22;
-    opacity: 0.8;
+    opacity: 0.9;
 }
 
 
@@ -440,6 +445,11 @@ html{
 }
 .white{
     color: white;
+    font-weight: bold;
+}
+.black{
+    color: black;
+    font-weight: bold;
 }
 .achievements{
     position: relative;
@@ -451,6 +461,7 @@ html{
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
+
 }
 .achievements::before {
     content: "";
@@ -558,6 +569,7 @@ html{
 }
 .why-us{
     padding: 4rem 7%;
+    background-color: #f2f2f2;
 }
 .main-us{
     display: flex;
@@ -601,21 +613,132 @@ html{
     line-height: 1;
 
 }
-#myDiv {
-    width: 500px;
-    height: 500px;
-    background-size: cover;
-    background-position: center;
+.container{
+    display: flex;
+    flex-direction: column;
+    position: relative;
+
+    background-color: #f2f2f2;
+
 }
-
-#myText {
-    font-size: 36px;
+.container .title{
     color: #003147;
-    text-align: center;
+    font-size: 40px;
+    margin-left: 150px;
+
+}
+.container .slides{
+    display: flex;
+    flex-direction: row;
+    position: relative;
+}
+.container .slides .slide{
+    display: none;
+    flex-direction: row;
+    align-items: center;
+
+}
+.container .slides .slide img{
+    width: 50%;
+    height: 500px;
+    margin-left: 650px;
+    border-top-left-radius: 60px;
+    border-top-right-radius: 80px;
+    border-bottom-left-radius: 60px;
+    border-bottom-right-radius: 80px;
+}
+.container .slides .slide .text{
+    width:50%;
+    float: left;
     position: absolute;
-    margin-top: 50px;
-    left: 40%;
-    transform: translate(-50%, -50%);
-  }
+}
+.container .slides .slide .text h2{
+    font-size: 30px;
+    color: #003147;
+    font-weight: bold;
+    margin-top: 90px;
+    margin-left: 150px;
+    font-family: 'Unbounded', sans-serif;
+}
+.container .slides .slide .text p{
+    margin-top: 5px;
+    margin-left: 50px;
+    font-size: 17px;
+    font-weight: 100;
 
+}
+.lowercase{
+    text-transform: none;
+}
+.container .title span{
+    box-shadow: 2px 2px 4px #003147;
+    display: inline-block;
+}
+.our-team{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    position: relative;
+    margin: 0;
+    background-color: #f2f2f2;
+}
+.our-team .meet{
+    display:flex;
+    justify-content: space-between;
+}
+.our-team .meet .words h1{
+    margin-left: 400px;
+    font-size: 30px;
+    color: #003147;
+    margin-bottom: 50px;
+    position:relative;
+}
+.our-team .meet .link a{
+    background: var(--secondary-color);
+    padding: 1rem 3rem;
+    font-size: 1.5rem;
+    color: white;
+    transition: .2s;
+    position: relative;
+}
+.card-box{
+    display: flex;
+    flex-direction: row;
+    justify-content:space-between;
 
+}
+.card{
+    background-color: white;
+    box-shadow: 0px 0px 10px #003147;
+    width: 300px;
+    text-align: center;
+    padding: 20px;
+    margin: 20px auto;
+}
+.ceo-image{
+    width: 100px;
+    height: 120px;
+    margin: 0 auto;
+    border-radius: 50%;
+    overflow: hidden;
+}
+.ceo-image img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.ceo-title{
+    margin: 20px 0;
+    font-size: 24px;
+    color: #333;
+}
+.ceo-text{
+    font-size: 14px;
+    color: #999;
+    margin-bottom: 20px;
+}
+.ceo-icons{
+    font-size: 18px;
+    color: #003147;
+    margin: 0 10px;
+}
