--- a/about.css
+++ b/about.css
@@ -112,12 +112,29 @@ html{
     width: 100%;
     margin-top: 50px;
 }
+.inner-about h1{
+    font-size: 30px;
+    font-family:Georgia, 'Times New Roman', Times, serif;
+    color: #003147;
+    margin-left: 50px;
+    margin-top: 10px;
+}
+.inner-about p{
+    font-size: 1.9rem;
+    font-family:Georgia, 'Times New Roman', Times, serif;
+    line-height: 2rem;
+    margin-bottom: 30px;
+    text-transform: none;
+    margin-top: 20px;
+    margin-left: 30px;
+    color: #003147;
+}
 .about-content{
     width: 80%;
 }
 
 .about-content p{
-    font-size: 1.7rem;
+    font-size: 1.9rem;
     font-family:Georgia, 'Times New Roman', Times, serif;
     line-height: 2rem;
     margin-bottom: 30px;
@@ -140,3 +157,21 @@ html{
     border: 1px solid var(--secondary-color);
     color: black;
 }
+.inner-about .content{
+    display: flex;
+    flex-direction: row;
+
+}
+.inner-about .batch{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+}
+
+.inner-about .batchy{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
