--- a/style.css
+++ b/style.css
@@ -742,3 +742,63 @@ html{
     color: #003147;
     margin: 0 10px;
 }
+.footer{
+    background-color: #003147;
+    width: 100%;
+    height: 500px;
+
+}
+.join-newsletter{
+    background-color: #003147;
+    width: 50%;
+    display: flex;
+    flex-direction: row;
+    margin: 20px;
+    padding: 15px;
+    border-radius: 20px;
+    left: 100%;
+
+}
+.subscribe-input{
+    flex: 2;
+    display: flex;
+    border: none;
+    background-color: #cfcece;
+    border-radius: 50px;
+    overflow: hidden;
+    padding:15px;
+
+}
+.subscribe-input input{
+    flex: 2;
+    border: none;
+    padding: 15px;
+    border-top-left-radius: 30px;
+    border-bottom-left-radius: 30px;
+}
+.submit-btn{
+    flex: 1;
+    width: 50px;
+    background-color: white;
+    border-top-right-radius: 30px;
+    border-bottom-right-radius: 30px;
+    border-top-left-radius: 30px;
+    border-bottom-left-radius: 30px;
+}
+.submit-btn button{
+    flex: 1;
+    color: white;
+    border: none;
+    padding: 15px;
+    margin: 0;
+    border-radius: 30px;
+    background-color: #ff5d22;
+}
+
+.subscribe-submit{
+    color: white;
+    border: none;
+    padding: 15px;
+    margin: 0;
+    border-radius: 30px;
+}
