--- a/style.css
+++ b/style.css
@@ -31,10 +31,10 @@ html{
 .navbar a{
     color: #003147;
     font-weight: bolder;
-    font-size: 1.6rem;
+    font-size: 1.8rem;
     margin-left: 2rem;
     position: relative;
-    gap: 4rem;
+    gap: 5rem;
 }
 .navbar a:after{
     content: '';
@@ -74,9 +74,46 @@ html{
     background: transparent;
     border: 1px solid var(--secondary-color);
     transition: .2s;
+    color: #003147;
 }
+
 .navbar.active{
     clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+}
+.dropbtn{
+    background-color: #ff5d22;
+    color: #003147;
+    padding: 10px;
+    font-size: 15px;
+    border: none;
+    cursor: pointer;
+}
+.dropbtn:hover, .dropbtn:focus{
+    background-color: #cfcece;
+}
+.dropdown{
+    position: relative;
+    display: inline-block;
+}
+.dropdown-content{
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+}
+.dropdown-content a{
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+.dropdown-content a:hover{
+    background-color: #ddd;
+}
+.show {
+    display: block;
 }
 .background{
     background-color: #f2f2f2;
@@ -746,7 +783,29 @@ html{
     background-color: #003147;
     width: 100%;
     height: 500px;
+    position: relative;
+    margin-top: 80px;
 
+}
+.footer h1{
+    color: #cfcece;
+    padding-left: 50px;
+    font-size: 30px;
+    padding-top: 50px;
+    position: absolute;
+    left: 50%;
+    font-weight: bold;
+
+}
+.footer h2{
+    color: #cfcece;
+    padding-left: 50px;
+    font-size: 20px;
+    padding-top: 90px;
+    position: absolute;
+    left: 50%;
+    text-transform: none;
+    font-weight: lighter;
 }
 .join-newsletter{
     background-color: #003147;
@@ -756,7 +815,7 @@ html{
     margin: 20px;
     padding: 15px;
     border-radius: 20px;
-    left: 100%;
+    padding-top: 50px;
 
 }
 .subscribe-input{
@@ -801,4 +860,52 @@ html{
     padding: 15px;
     margin: 0;
     border-radius: 30px;
+
 }
+.line hr{
+    color: #cfcece;
+    border-style: solid;
+    border-width: 1px;
+    margin-left: 40px;
+    margin-right: 40px;
+    margin-top: 30px;
+}
+.main-footer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20;
+    flex-wrap: wrap;
+}
+.inner-footer{
+    flex: 1 1 200px;
+}
+.inner-footer img{
+    height: 150px;
+    width: 150px;
+    margin-left: 40px;
+    margin-top: 70px;
+}
+.inner-footer h2{
+    font-size: 2rem;
+    color: black;
+
+}
+.inner-footer a{
+    font-size: 1.5rem;
+    font-weight: bolder;
+    color: black;
+    display: block;
+    margin-top: 1rem;
+    padding-top: 1rem;
+}
+.inner-footer a{
+    margin-left: 10px;
+}
+
+
+
+
+
+
+
