signup page and javascript functions

--- a/style.css
+++ b/style.css
@@ -82,14 +82,14 @@ html{
 }
 .dropbtn{
     background-color: #ff5d22;
-    color: #003147;
+    color: white;
     padding: 10px;
     font-size: 15px;
     border: none;
     cursor: pointer;
 }
 .dropbtn:hover, .dropbtn:focus{
-    background-color: #cfcece;
+    background-color: #003147;
 }
 .dropdown{
     position: relative;
@@ -99,15 +99,16 @@ html{
     display: none;
     position: absolute;
     background-color: #f1f1f1;
-    min-width: 160px;
+    min-width: 200px;
     box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
     z-index: 1;
 }
 .dropdown-content a{
     color: black;
-    padding: 12px 16px;
+    padding: 15px 19px;
     text-decoration: none;
     display: block;
+    font-size: 15px;
 }
 .dropdown-content a:hover{
     background-color: #ddd;
