--- a/faq.css
+++ b/faq.css
@@ -30,6 +30,7 @@ html{
 }
 .navbar a{
     color: #003147;
+    font-weight: bolder;
     font-size: 1.8rem;
     margin-left: 2rem;
     position: relative;
@@ -76,6 +77,42 @@ html{
 }
 .navbar.active{
     clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+}
+.dropbtn{
+    background-color: #ff5d22;
+    color: white;
+    padding: 10px;
+    font-size: 15px;
+    border: none;
+    cursor: pointer;
+}
+.dropbtn:hover, .dropbtn:focus{
+    background-color: #003147;
+}
+.dropdown{
+    position: relative;
+    display: inline-block;
+}
+.dropdown-content{
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 200px;
+    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+}
+.dropdown-content a{
+    color: black;
+    padding: 15px 19px;
+    text-decoration: none;
+    display: block;
+    font-size: 15px;
+}
+.dropdown-content a:hover{
+    background-color: #ddd;
+}
+.show {
+    display: block;
 }
 
 .background{
