--- a/services.css
+++ b/services.css
@@ -78,6 +78,42 @@ html{
 .navbar.active{
     clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
 }
+.dropbtn{
+    background-color: #ff5d22;
+    color: white;
+    padding: 10px;
+    font-size: 15px;
+    border: none;
+    cursor: pointer;
+}
+.dropbtn:hover, .dropbtn:focus{
+    background-color: #003147;
+}
+.dropdown{
+    position: relative;
+    display: inline-block;
+}
+.dropdown-content{
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 200px;
+    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+}
+.dropdown-content a{
+    color: black;
+    padding: 15px 19px;
+    text-decoration: none;
+    display: block;
+    font-size: 15px;
+}
+.dropdown-content a:hover{
+    background-color: #ddd;
+}
+.show {
+    display: block;
+}
 
 .background{
     height: 550px;
