--- a/style.css
+++ b/style.css
@@ -133,18 +133,7 @@ html{
     border-bottom-right-radius: 80px;
     position: relative;
 }
-.background .appointment{
-    background-color: var(--main-color);
-    position:absolute;
-    width: 55%;
-    height: 30%;
-    margin-left: 30%;
-    top: 80%;
-}
-.appointment{
-    color: #cfcece;
 
-}
 .appointment h3{
     text-align: center;
     margin-top: 20px;
@@ -903,6 +892,151 @@ html{
 .inner-footer a{
     margin-left: 10px;
 }
+/* appointment*/
+
+.appointment-desc{
+    padding: 20px;
+    margin-top: 40px;
+    font-size: 15px;
+    justify-content: center;
+    padding: 4rem;
+    display: flex;
+    max-width: 900px;
+
+
+}
+
+
+#appointment-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: white;
+    border: none;
+    box-shadow: 0 6px 12px 0 rgba(0,0.2,0,0.4);
+    max-width: 700px;
+    padding: 20px;
+    border-radius: 10px;
+    margin: auto;
+    margin-top: 60px;
+}
+
+#appointment-form div {
+    display: flex;
+    flex-direction: column;
+    margin: 10px;
+}
+
+#appointment-form label {
+    font-size: 1.8rem;
+    font-weight: bold;
+    margin-bottom: 5px;
+
+}
+
+#appointment-form input,
+#appointment-form select {
+    padding: 10px;
+    border-radius: 5px;
+    border: 1px solid black;
+    font-size: 1rem;
+    margin-top: 5px;
+    width: 30rem;
+
+}
+
+#appointment-form button[type="submit"] {
+    background-color: gold;
+    border: none;
+    color: black;
+    padding: 10px 20px;
+    font-size: 1rem;
+    border-radius: 5px;
+    cursor: pointer;
+    margin-top: 10px;
+    font-weight: bold;
+}
+
+#appointment-form button[type="submit"]:hover {
+    background-color: black;
+    color: gold;
+}
+
+/*make appointment*/
+#appointment-div {
+    background-color: var(--main-color);
+    position: absolute;
+    width: 55%;
+    height: 50%;
+    margin-left: 30%;
+    top: 80%;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    padding: 20px;
+    text-align: center;
+    max-width: 600px;
+
+}
+
+.info-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 20px;
+}
+.appointment-div h2{
+    color:#ddd;
+
+}
+
+.services,
+.hours {
+    flex-basis: 48%;
+    color:#ddd;
+}
+
+.divider {
+    width: 2px;
+    height: 80%;
+    background-color: #ddd;
+}
+
+.services h3,
+.hours h3 {
+    margin-bottom: 10px;
+    color:#ddd;
+    font-size: 25px;
+}
+
+.services ul,
+.hours ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.services ul li,
+.hours ul li {
+    margin-bottom: 5px;
+    color:#ddd;
+    font-size: 15px;
+}
+
+button {
+    background-color: #007bff;
+    border: none;
+    border-radius: 5px;
+    color: #fff;
+    font-size: 16px;
+    padding: 10px 20px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+button:hover {
+    background-color: #0069d9;
+}
+
 
 
 
